# chzzk-oauth-toolkit

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
chzzk_oauth/: __init__.py  cli.py  client.py  config.py  envfile.py  server.py  storage.py
scripts/: _bootstrap.py  exchange_code.py  refresh_token.py  request_auth_url.py  revoke_token.py  run_auth_server.py
